--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.3.0",
     "swr": "^2.2.5",
+    "uuid": "^11.0.3",
     "zod": "^3.23.8",
     "zustand": "^5.0.2"
   },
